# UncertaintyQualificationAPP

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
appcore/: __init__.py  security.py  store.py
dfun_model_package/: MANIFEST.json  README.md
dfun_model_package/dfun/: dfun_model.py  focal_loss_label_smoothing.py  infer.py  preprocess.py
dfun_model_package/mappings/: space_group_mapping.csv  space_group_mapping.json
dfun_model_package/metadata/: model_card.json  sample_metadata.json
dfun_model_package/samples/: expected_output.json  opxrd_public_sample.npz
inference/: __init__.py  adapters.py
models/: README.md
models/dfun/: model_config.example.json
models/evifield/: model_config.example.json
sciuq_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_copyright_docs.py
system_handoff_evifield_era/: MODEL_IO_SPEC.md  README.md  REAL_SAMPLES.md  manifest.json
system_handoff_evifield_era/code/: create_test_sample.py  evidential.py  inference_ltem_minimal.py  inference_minimal.py  model.py  preprocess.py
system_handoff_evifield_era/expected_output/: reproduced_outputs.npz  reproduced_outputs.summary.json  test_sample_evifield_era_outputs.summary.json
system_handoff_evifield_era/real_samples/: manifest.json  real_samples_summary.json
system_handoff_evifield_era/test_sample/: README.md
tests/: test_adapters.py  test_core.py  test_store.py
ui/: __init__.py  theme.py
uqcore/: __init__.py  classification.py  niw.py  risk.py
(+8 files in other folders)
