[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sciuq-studio"
version = "1.0.0"
description = "科学预测不确定性量化与风险评估系统"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.18",
  "streamlit>=1.48,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
models = [
  "torch>=2.1",
  "scipy>=1.10",
  "Pillow>=10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["uqcore*", "inference*", "appcore*"]
